// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Recovery Phrase Component should match snapshot 1`] = `
<div>
  <div
    class="recovery-phrase"
    data-testid="recovery-phrase"
  >
    <div
      class="box box--flex-direction-row"
    >
      <ul
        class="progressbar"
      >
        <li
          class="active complete"
        >
          Create password
        </li>
        <li
          class="active"
        >
          Secure wallet
        </li>
        <li
          class=""
        >
          Confirm secret recovery phrase
        </li>
      </ul>
    </div>
    <div
      class="box box--margin-bottom-4 box--flex-direction-row box--justify-content-center box--text-align-center box--display-flex"
    >
      <h2
        class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography recovery-phrase__header typography--h2 typography--weight-bold typography--style-normal typography--color-text-default"
      >
        Write down your Secret Recovery Phrase
      </h2>
    </div>
    <div
      class="box box--margin-bottom-4 box--flex-direction-row box--justify-content-center box--text-align-center box--display-flex"
    >
      <h4
        class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-normal typography--style-normal typography--color-text-default"
      >
        Write down this 12-word Secret Recovery Phrase and save it in a place that you trust and only you can access.
      </h4>
    </div>
    <div
      class="box recovery-phrase__tips box--margin-bottom-4 box--flex-direction-row box--text-align-left"
    >
      <h4
        class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
      >
        Tips
        :
      </h4>
      <ul>
        <li>
          <h4
            class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-normal typography--style-normal typography--color-text-default"
          >
            Save in a password manager
          </h4>
        </li>
        <li>
          <h4
            class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-normal typography--style-normal typography--color-text-default"
          >
            Store in a safe deposit box
          </h4>
        </li>
        <li>
          <h4
            class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-normal typography--style-normal typography--color-text-default"
          >
            Write down and store in multiple secret places
          </h4>
        </li>
      </ul>
    </div>
    <div
      class="mm-box recovery-phrase-chips mm-box--margin-bottom-4 mm-box--padding-4 mm-box--display-grid mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
    >
      <div
        class="mm-box recovery-phrase-chips__chips recovery-phrase-chips__chips--hidden mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
        data-testid="recovery-phrase-chips"
      >
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            1.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-0"
          >
            debris
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            2.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-1"
          >
            dizzy
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            3.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-2"
          >
            just
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            4.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-3"
          >
            program
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            5.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-4"
          >
            just
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            6.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-5"
          >
            float
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            7.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-6"
          >
            decrease
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            8.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-7"
          >
            vacant
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            9.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-8"
          >
            alarm
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            10.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-9"
          >
            reduce
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            11.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-10"
          >
            speak
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            12.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-11"
          >
            stadium
          </p>
        </div>
      </div>
      <div
        class="mm-box recovery-phrase-chips__secret-blocker mm-box--padding-4 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--color-overlay-inverse"
      >
        <span
          class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/eye.svg');"
        />
        <p
          class="mm-box mm-text mm-text--body-lg-medium mm-box--color-overlay-inverse"
        >
          Make sure nobody is looking
        </p>
      </div>
    </div>
    <div
      class="recovery-phrase__footer"
    >
      <button
        class="button btn--rounded btn-primary recovery-phrase__footer--button"
        data-testid="recovery-phrase-reveal"
      >
        Reveal Secret Recovery Phrase
      </button>
    </div>
  </div>
</div>
`;

exports[`Review Recovery Phrase Component should match snapshot after reveal recovery button is clicked 1`] = `
<div>
  <div
    class="recovery-phrase"
    data-testid="recovery-phrase"
  >
    <div
      class="box box--flex-direction-row"
    >
      <ul
        class="progressbar"
      >
        <li
          class="active complete"
        >
          Create password
        </li>
        <li
          class="active"
        >
          Secure wallet
        </li>
        <li
          class=""
        >
          Confirm secret recovery phrase
        </li>
      </ul>
    </div>
    <div
      class="box box--margin-bottom-4 box--flex-direction-row box--justify-content-center box--text-align-center box--display-flex"
    >
      <h2
        class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography recovery-phrase__header typography--h2 typography--weight-bold typography--style-normal typography--color-text-default"
      >
        Write down your Secret Recovery Phrase
      </h2>
    </div>
    <div
      class="box box--margin-bottom-4 box--flex-direction-row box--justify-content-center box--text-align-center box--display-flex"
    >
      <h4
        class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-normal typography--style-normal typography--color-text-default"
      >
        Write down this 12-word Secret Recovery Phrase and save it in a place that you trust and only you can access.
      </h4>
    </div>
    <div
      class="box recovery-phrase__tips box--margin-bottom-4 box--flex-direction-row box--text-align-left"
    >
      <h4
        class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
      >
        Tips
        :
      </h4>
      <ul>
        <li>
          <h4
            class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-normal typography--style-normal typography--color-text-default"
          >
            Save in a password manager
          </h4>
        </li>
        <li>
          <h4
            class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-normal typography--style-normal typography--color-text-default"
          >
            Store in a safe deposit box
          </h4>
        </li>
        <li>
          <h4
            class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--h4 typography--weight-normal typography--style-normal typography--color-text-default"
          >
            Write down and store in multiple secret places
          </h4>
        </li>
      </ul>
    </div>
    <div
      class="mm-box recovery-phrase-chips mm-box--margin-bottom-4 mm-box--padding-4 mm-box--display-grid mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
    >
      <div
        class="mm-box recovery-phrase-chips__chips mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
        data-testid="recovery-phrase-chips"
      >
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            1.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-0"
          >
            debris
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            2.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-1"
          >
            dizzy
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            3.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-2"
          >
            just
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            4.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-3"
          >
            program
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            5.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-4"
          >
            just
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            6.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-5"
          >
            float
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            7.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-6"
          >
            decrease
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            8.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-7"
          >
            vacant
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            9.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-8"
          >
            alarm
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            10.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-9"
          >
            reduce
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            11.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-10"
          >
            speak
          </p>
        </div>
        <div
          class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            12.
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
            data-testid="recovery-phrase-chip-11"
          >
            stadium
          </p>
        </div>
      </div>
    </div>
    <div
      class="recovery-phrase__footer"
    >
      <div
        class="recovery-phrase__footer__copy-and-hide"
      >
        <div
          class="recovery-phrase__footer__copy-and-hide__area"
        >
          <a
            class="button btn-link recovery-phrase__footer__copy-and-hide__button recovery-phrase__footer__copy-and-hide__button__hide-seed"
            role="button"
            tabindex="0"
          >
            <span
              class="button__icon"
            >
              <i
                class="far fa-eye-slash"
                color="var(--color-primary-default)"
              />
            </span>
            Hide seed phrase
          </a>
          <a
            class="button btn-link recovery-phrase__footer__copy-and-hide__button recovery-phrase__footer__copy-and-hide__button__copy-to-clipboard"
            role="button"
            tabindex="0"
          >
            <span
              class="button__icon"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-primary-default"
                style="mask-image: url('./images/icons/copy.svg');"
              />
            </span>
            Copy to clipboard
          </a>
        </div>
        <button
          class="button btn--rounded btn-primary recovery-phrase__footer--button"
          data-testid="recovery-phrase-next"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;
